# P1-A-Problem-that-solves-a-program

./: CMakeLists.txt  README.md  flake.nix
src/: input.c  main.c
